--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,18 @@
         <h1 class="control__title">TASKMANAGER</h1>
         <!-- Меню -->
       </section>
-
+      <section class="main__search search container">
       <!-- Поиск -->
-
+      </section>
+      <section class="main__filter filter container">
       <!-- Фильтры -->
-
+      </section>
+      <section class="board container">
       <!-- Контент -->
+      <div class="board__tasks">
+
+      </div>
+      </section>
     </main>
   <script type="text/javascript" src="../src/main.js"></script>
   </body>
